<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:navigationIcon="@drawable/ic_arrow_back_24"
            app:title="@string/settings" />

        <com.google.android.material.textview.MaterialTextView
            android:text="@string/lang"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/drop_lang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lang"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:layout_marginTop="8dp"
            android:text="@string/restart_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <!-- Тренування -->
        <com.google.android.material.textview.MaterialTextView
            android:layout_marginTop="24dp"
            android:text="@string/play_settings"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- Мова озвучки -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/drop_tts_voice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tts_voice"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Кількість варіантів -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/drop_choices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/choices_count"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

</ScrollView>
