<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Мова СЛОВА -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/dropSrcLang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lang_from"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Мова ПЕРЕКЛАДУ -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/dropDstLang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lang_to"
                android:inputType="none"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFront"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/word_front"
                android:imeOptions="actionNext"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etBack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/word_back"
                android:imeOptions="actionDone"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
